@@ -1,6 +1,8 @@
 package com.company;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedList;
 import java.util.List;
 
 public class Board {
@@ -16,31 +18,34 @@ public class Board {
 
     char[][] board;
     Board parent = null;
+    int depth = 0;
+
 
     public Board(){
         board = new char[N][N];
     }
 
 
-    public static Board startBoard() { //Estado inicial
+    public static Board startBoard() {
 
-        Board boardState = new Board();
+        Board boardState = new Board(); //Estado inicial
 
-        for (int i=0; i<boardState.board.length; i++) {
-            for (int j=0; j<boardState.board.length; j++) {
-                boardState.board[i][j] = QUEEN;
+        for (int i = 0; i < boardState.board.length; i++) {
+            for (int j = 0; j< boardState.board.length; j++) {
+                boardState.board[i][j] = EMPTY;
             }
         }
 
+        boardState.depth = 0;
         return boardState;
     }
 
     public void printBoard() {
 
-        for (int i=0; i<N; i++) {
+        for (int i = 0; i < N; i++) {
             System.out.println( "+---".repeat(N) + "+" );
 
-            for (int j=0; j<N; j++) {
+            for (int j = 0; j < N; j++) {
                 System.out.print( "+ " + board[i][j] + " " );
             }
             System.out.println( "+" );
@@ -50,8 +55,123 @@ public class Board {
 
     }
 
+
+
+    private Board placeQueenOnTheBoard(int xQueen, int yQueen){
+
+        if (this.board[xQueen][yQueen] != EMPTY ) {
+            throw new IllegalArgumentException(" La casilla ya esta ocupada! ");
+        }
+
+        Board nextStep = new Board(); // tablero "hijo"
+
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < N; j++) {
+
+                if (i == xQueen && j == yQueen ) {
+                    nextStep.board[i][j] = QUEEN;
+                } else{
+                    nextStep.board[i][j] = this.board[i][j];
+                }
+
+            }
+        }
+
+        nextStep.parent = this;
+        nextStep.depth = this.depth + 1;
+
+        return nextStep;
+    }
+
+    public boolean isGoalState(){
+        //1. hay N reinas
+
+        int numberOfQueens = 0;
+
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < N; j++) {
+
+                if (this.board[i][j] == QUEEN) {
+                    numberOfQueens++;
+                }
+
+            }
+        }
+
+        if (numberOfQueens != N) {
+            return false;
+        }
+
+        return  !possibleCapture() ;  //2. ninguna se intersecta con otra
+
+    }
+
+    private boolean possibleCapture() {
+        //Intersecciones:
+
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < N; j++) {
+
+                if ( this.board[i][j] == QUEEN ) {
+
+                    for (int x = 0; x < N; x++) {
+                        for (int y = 0; y < N; y++) {
+
+                            //[x][y] nueva reina
+                            if ( (i != x || j != y) && (this.board[x][y] == QUEEN) ) { // Si la posicion [x][y] no es la misma a la reina anterior y no es vacio
+
+                                if ( (i == x || j == y ) || ( (x - i == y - j) || (i + j == x + y) ))
+                                    return true;
+
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+
+        return false;
+    }
+
     public List<Board> succesors(){
-        return List.of();
+        if ( possibleCapture() && depth >= N) {
+            return Collections.emptyList();
+        }
+
+        List<Board> children = new ArrayList<>();
+
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < N; j++) {
+
+                    if (this.board[i][j] == EMPTY && !possibleCapture()) {
+                           children.add(placeQueenOnTheBoard(i, j));
+                    }
+
+
+            }
+        }
+        return children;
+    }
+
+    public Board searchForGoalState() {
+        List<Board> q = new LinkedList<>();
+
+        q.add(this); // Agregar Nodo actual
+
+        do{
+            Board nextChildToCheck = q.remove(0);
+//            System.out.println(" Nuevo Estado : ");
+//            nextChildToCheck.printBoard();
+
+            if(nextChildToCheck.isGoalState()){
+                return nextChildToCheck;
+            }
+
+            q.addAll(0,nextChildToCheck.succesors());
+        }while( !q.isEmpty() );
+
+        return null;
     }
 
 }
